--- a/views/about.hbs
+++ b/views/about.hbs
@@ -7,12 +7,12 @@
 
 <body>
 
-    <header>
-        <h1><a href="/">No Late Fees</a></h1>
+   <header>
         <ul class="nav">
+            <li><a href="/"><strong>No Late Fees</strong></a></li>
             <li><a href="/book/new">Add a Book</a></li>
             <li><a href="/about">About</a></li>
-            <li><a href="bookshelf">Bookshelf</a></li>
+            <li><a href="/bookshelf">Bookshelf</a></li>
         </ul>
     </header>
 
@@ -37,7 +37,7 @@
         </p>
        
         <p class="about">&nbsp;</p>
-        <p class="about">Design: <a href="http://www.benfehrmanlee.info" target="_blank">Ben Fehrman-Lee</a></p>
+        <p class="about">Design &amp; Front-End: <a href="http://www.benfehrmanlee.info" target="_blank">Ben Fehrman-Lee</a></p>
         <p class="about">Development: <a href="http://www.linkedbyair.net" target="_blank">Dan Michaelson</a></p>
         <p class="about">Running on: <a href="http://www.heroku.com" target="_blank">Heroku</a></p>
     </div><!--END libraryWrapper-->
@@ -46,14 +46,11 @@
 
 <footer>
     <ul class="one-fourth">
-        <li><strong>No Late Fees</strong></li>
-        <li><a href="http://www.art.yale.edu" target="_blank">Yale School of Art</a></li>
+        <li><a href="http://art.yale.edu" target="_blank">Yale School of Art</a></li>
     </ul>
    
     <ul class="one-fourth">
         <li><a href="mailto:benjamin.d.lee@yale.edu" target="_blank">Contact</a></li>
-        <li>&copy; 2015</li>
     </ul>
 </footer>
-
 </body>
