--- a/views/book.hbs
+++ b/views/book.hbs
@@ -1,6 +1,6 @@
  <header>
-        <h1><a href="/">No Late Fees&trade;</a></h1>
         <ul class="nav">
+            <li><a href="/"><strong>No Late Fees</strong></a></li>
             <li><a href="/book/new">Add a Book</a></li>
             <li><a href="/about">About</a></li>
             <li><a href="/bookshelf">Bookshelf</a></li>
@@ -38,12 +38,10 @@
 
 <footer>
     <ul class="one-fourth">
-        <li><strong>No Late Fees</strong></li>
-        <li><a href="http://www.art.yale.edu" target="_blank">Yale School of Art</a></li>
+        <li><a href="http://art.yale.edu" target="_blank">Yale School of Art</a></li>
     </ul>
    
     <ul class="one-fourth">
         <li><a href="mailto:benjamin.d.lee@yale.edu" target="_blank">Contact</a></li>
-        <li>&copy; 2015</li>
     </ul>
 </footer>
