--- a/views/book_new.hbs
+++ b/views/book_new.hbs
@@ -10,16 +10,16 @@ thing as filling in the form and pressing "Submit".
 <body>
     
      <header>
-        <h1><a href="/">No Late Fees</a></h1>
         <ul class="nav">
+            <li><a href="/"><strong>No Late Fees</strong></a></li>
             <li><a href="/book/new">Add a Book</a></li>
             <li><a href="/about">About</a></li>
-            <li><a href="/book_shelf">Bookshelf</a></li>
+            <li><a href="/bookshelf">Bookshelf</a></li>
         </ul>
     </header>
 
 <div class="libraryWrapper">
-    <form class="book_form" action="/book/create">
+    <form class="book_form" action="/book/create" >
     
     <!-- The "name" attribute determines the name of the attribute in the URL -->
     <ul>
@@ -49,6 +49,7 @@ thing as filling in the form and pressing "Submit".
     </div><!--END libraryWrapper-->
 </form>
 
+<!--
 <footer>
     <ul class="one-fourth">
         <li><strong>No Late Fees</strong></li>
@@ -60,4 +61,5 @@ thing as filling in the form and pressing "Submit".
         <li>&copy; 2015</li>
     </ul>
 </footer>
+-->
 </body>
