--- a/views/book_create.hbs
+++ b/views/book_create.hbs
@@ -1,10 +1,11 @@
 <body>
     
-    <header>
-        <h1><a href="/">No Late Fees</a></h1>
+   <header>
         <ul class="nav">
+            <li><a href="/"><strong>No Late Fees</strong></a></li>
             <li><a href="/book/new">Add a Book</a></li>
             <li><a href="/about">About</a></li>
+            <li><a href="/bookshelf">Bookshelf</a></li>
         </ul>
     </header>
     
@@ -17,6 +18,7 @@
     
     </div><!--END libraryWrapper-->
     
+    <!--
     <footer>
     <ul class="one-fourth">
         <li><strong>No Late Fees</strong></li>
@@ -28,6 +30,7 @@
         <li>&copy; 2015</li>
     </ul>
 </footer>
+-->
     
 </body>
 
