--- a/views/student.hbs
+++ b/views/student.hbs
@@ -1,10 +1,10 @@
 <body>
 
     <header>
-        <h1><a href="/">No Late Fees</a></h1>
         <ul class="nav">
+            <li><a href="/"><strong>No Late Fees</strong></a></li>
             <li><a href="/book/new">Add a Book</a></li>
-            <li><a href="/about">About this site</a></li>
+            <li><a href="/about">About</a></li>
             <li><a href="/bookshelf">Bookshelf</a></li>
         </ul>
     </header>
@@ -16,7 +16,7 @@
            <p>Available Books</p>
             {{#each books}}
                 <p class="entry">
-                      <a class="title {{loanClass}}" href="/book?name={{title}}"><strong>{{title}}</strong></a> by <a class="author" href="/author?name={{author}}">{{author}}</a>
+                      <a class="title {{loanClass}}" href="/book?name={{title}}">{{title}}</a> by <a class="author" href="/author?name={{author}}">{{author}}</a>
                 </p>
             {{/each}}
             
@@ -26,13 +26,11 @@
     
     <footer>
     <ul class="one-fourth">
-        <li><strong>No Late Fees</strong></li>
-        <li><a href="http://www.art.yale.edu" target="_blank">Yale School of Art</a></li>
+        <li><a href="http://art.yale.edu" target="_blank">Yale School of Art</a></li>
     </ul>
    
     <ul class="one-fourth">
         <li><a href="mailto:benjamin.d.lee@yale.edu" target="_blank">Contact</a></li>
-        <li>&copy; 2015</li>
     </ul>
 </footer>
 
