--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -2,6 +2,7 @@
 <html>
   <head>
     <title>{{title}}</title>
+    <link rel="shortcut icon" href="/favicon.ico">
     <link rel='stylesheet' href='/stylesheets/style.css' />
   </head>
   <body>
